tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/removed-machine-integer-types.wyst
module removed_machine_integer_types

fn bad(value: usize) -> isize {
    return value
}
